added changes to html

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 	<title></title>
 </head>
 <body>
-	<header>header</header>
-	<nav>nav</nav>
-		<section>
-			<atricle>
-			
-				<h1>h1</h1>
-				<h2>h2</h2>
-				<h3>h3</h3>
-				<p>p</p>
-
-			</atricle>
-		</section>
+	<div class"container">
+		<header>header</header>
+		<nav>nav</nav>
+	<section>section</section>
+	<article>article</article>
+	<h1>h1,h2,h3</h1>
+	<p>p</p>
 	<aside>aside</aside>
+	<footer>footer</footer>
+
+	</div>
+
+
 
 
 </body>
