--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
 	<title></title>
 </head>
 <body>
-	<div class"container">
-		<header>header</header>
+	<div class="container">
+
+	<header>header</header>
 		<nav>nav</nav>
-	<section>section</section>
-	<article>article</article>
-	<h1>h1,h2,h3</h1>
-	<p>p</p>
-	<aside>aside</aside>
-	<footer>footer</footer>
+		
+		<section>section</section>
+		
+		<article>article</article>
+		
+		<h1>h1,h2,h3</h1>
+		
+		<p>p</p>
 
-	</div>
+		<aside>aside</aside>
+
+		<footer>footer</footer>
 
 
+	
+	
 
-
+		
+</div>
 </body>
 </html>
